# ErrorProfiler

./: README.md  errorprofiler.py  pyproject.toml  requirements.txt  syntheticgenerator.py  syntheticprofile.py  test.py  test_data.csv
alt_name_lookups/: forename_lookup.parquet
corrupt/: geco_corrupt.py
errorprofiler/: __init__.py  errorprofiler.py
output/: my_profile.json
