[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "errorprofiler"
version = "0.1.0"
description = "Synthetic error profiling and generation for record linkage experiments"
authors = [
    {name="Joseph Lam", email="joseph.lam.18@ucl.ac.uk"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "faker",
]
